--- a/md2pdf/res/template.html
+++ b/md2pdf/res/template.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="{{stysheet}}" title="user stylesheet" type="text/css" />
+  <style type="text/css" media="all">
+    {{style}}
+  </style>
 </head>
 <body>
   {{html}}
